This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2024-07-18:

- Fixed a regression where 'read' cannot create a previously nonexistent
  variable when used within a namespace block. Bug introduced on 2023-06-02.

2024-07-17:

- Fixed: if the --posix or --letoctal option was turned on, octal numbers
  designated by the leading-zero octal prefix enabled by these options but
  containing the invalid digits 8 or 9 (e.g., $((09)) or let "09") failed
  to throw an error and were instead incorrectly reinterpreted as decimal.

- Fixed: invalid leading zeros in the '0x' hexadecimal prefix or in ksh
  arithmetic base specifiers, e.g., 00x2F or 016#2F (instead of 0x2F or 16#2F),
  failed to throw an arithmetic syntax error.

2024-07-16:

- The history expansion character ('!' by default) is now not processed when
  immediately following '${'. This makes it psosible to use expansion syntax
  like ${!varname} and ${!prefix@} on the interactive command line with the
  histexpand option on; these no longer trigger an "event not found" error.

2024-07-13:

- The shell is now capable of handling more than 32767 simultaneous
  background jobs, subject to system limitations.

2024-07-02:

- Release 1.0.9.

- Support for UNC paths (//server/dir) is now enabled by default on Cygwin.

2024-06-30:

- Fixed: the 'hash' and 'alias -t' commands no longer autoload functions
  from executable files on FPATH as an unintended side effect.

2024-06-27:

- Fixed: a builtin activated with the 'builtin' command was not found if
  invoked within a namespace block on the same line as the 'builtin' command.

2024-06-26:

- Fixed: when the --showme option was used with a command containing multiple
  redirections, only the first redirection was shown, without a newline. This